--- a/weixin/html/all_rank_html_back.html
+++ b/weixin/html/all_rank_html_back.html
@@ -50,6 +50,16 @@
     </script>
 </head>
 <body>
+<label>查询：</label><input list="browsers" />
+<datalist id="browsers">
+    <option value="Internet Explorer" label="IE">
+    <option value="Firefox" label="火狐">
+    <option value="Chrome" label="谷歌">
+    <option value="Opera" label="欧朋">
+    <option value="Safari" label="Safari">
+    <option value="Sogou" label="搜狗">
+</datalist>
+<br>
 <ul class="tab tab-block">
                     <li class="tab-item" :class="tabSelected==='today'?'active':''">
                         <a href="javascript:void(0);">今日</a>
