--- a/weixin/html/all_rank_html_back.html
+++ b/weixin/html/all_rank_html_back.html
@@ -27,7 +27,7 @@
         function handle_data(data) {
             data = JSON.parse(data);
             data.forEach(function(curent,index, item) {
-                $("#main_tboby").append( "<tr><th>" + index.toString()+ "</th><th>" + curent["nickName"]+"</th><th>"+curent["scoreNow"]+ "</th></tr>");
+                $("#main_tboby").append( "<tr><th>" + (index+1).toString()+ "</th><th>" + curent["nickName"]+"</th><th>"+curent["scoreNow"]+ "</th></tr>");
             });
         }
         $(document).ready(function () {
@@ -60,8 +60,9 @@
                 <table class="table table-striped table-hover" style="font-size: 0.5em;">
                     <thead>
                     <tr>
-                        <th>昵称</th>
                         <th>排名</th>
+                        <th>昵称</th>
+
                         <th>步数</th>
                     </tr>
                     </thead>
