--- a/weixin/html/all_rank_html_back.html
+++ b/weixin/html/all_rank_html_back.html
@@ -31,6 +31,9 @@
             });
         }
         $(document).ready(function () {
+            $("#select_query").bind("change", function () {
+               alert($(this).val());
+            });
             $.post("today",
                 {"day": 123,
                 "date": handle_time()
@@ -53,9 +56,11 @@
 <div id="select_div" style="padding-top: 10px">
     <label>查询：</label>
     <select id="select_query">
-        <option value="my_data">我的个人主页</option>
+        <option value="today">今日数据</option>
+        <option value="my_home">我的个人主页</option>
         <option value="current_week">查看本周</option>
         <option value="last_week">查看上周</option>
+        <option value="month">查看本月</option>
     </select></div>
 <br>
 <ul class="tab tab-block">
