--- a/weixin/html/all_rank_html_back.html
+++ b/weixin/html/all_rank_html_back.html
@@ -32,7 +32,23 @@
         }
         $(document).ready(function () {
             $("#select_query").bind("change", function () {
-               alert($(this).val());
+               var key = $(this).val();
+               alert(key);
+
+               $.post("querydata",
+                {"key": key
+                },
+                function (data, status) {
+                    if (status == "success")
+                    {
+                        handle_data(data);
+
+                    }
+
+                }
+
+            );
+
             });
             $.post("today",
                 {"day": 123,
