--- a/weixin/html/all_rank_html_back.html
+++ b/weixin/html/all_rank_html_back.html
@@ -26,7 +26,9 @@
         }
         function handle_data(data) {
             data = JSON.parse(data);
+            $("#main_tboby").empty();
             data.forEach(function(curent,index, item) {
+
                 $("#main_tboby").append( "<tr><th>" + (index+1).toString()+ "</th><th>" + curent["nickName"]+"</th><th>"+curent["scoreNow"]+ "</th></tr>");
             });
         }
