--- a/weixin/html/all_rank_html_back.html
+++ b/weixin/html/all_rank_html_back.html
@@ -35,7 +35,13 @@
         $(document).ready(function () {
             $("#select_query").bind("change", function () {
                var key = $(this).val();
-               $.post("querydata",
+               if (key == "my_home")
+               {
+                   alert("个人页面正在开发中，请等待...");
+               }
+               else
+               {
+                   $.post("querydata",
                 {"key": key
                 },
                 function (data, status) {
@@ -48,6 +54,8 @@
                 }
 
             );
+               }
+
 
             });
             $.post("today",
